--- a/DS1.ipynb
+++ b/DS1.ipynb
@@ -388,9 +388,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"arraVslist.png\">\n",
-    "<img src=\"array.png\">\n",
-    "<img src=\"pythonarray.png\">\n"
+    "<img src=\"arraVslist.png\"/>\n",
+    "<img src=\"array.png\"/>\n",
+    "<img src=\"pythonarray.png\"/>\n"
    ]
   },
   {
