--- a/DS1.ipynb
+++ b/DS1.ipynb
@@ -388,9 +388,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"Image/arraVslist.png\" width=\"800\"/>\n",
-    "<img src=\"Image/array.png\" width=\"800\"/>\n",
-    "<img src=\"Image/pythonarray.png\" width=\"800\"/>\n"
+    "<img src=\"Image/arraVslist.PNG\" width=\"800\"/>\n",
+    "<img src=\"Image/array.PNG\" width=\"800\"/>\n",
+    "<img src=\"Image/pythonarray.PNG\" width=\"800\"/>\n"
    ]
   },
   {
